fixes jumping markers for real, seriously this time

--- a/ionic/scss/ionic.app.scss
+++ b/ionic/scss/ionic.app.scss
@@ -703,6 +703,11 @@ input, button, select, textarea {
 
 }
 
+.marker.notHappeningMarker {
+	top: 0px;
+	left: 46px;
+}
+
 .happening, .happening2 {
 	position: absolute;
 	top: 0px;
